--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,13 +11,13 @@ phases:
       - REPOSITORY_URI=156208147725.dkr.ecr.ap-south-1.amazonaws.com/node-app
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
-  
+     
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker login -u sri5606 -p $password
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
@@ -26,6 +26,6 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       #- echo Writing image definitions file...
       #- printf '[{"name":"node-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-     # - cat imagedefinitions.json 
+      #- cat imagedefinitions.json 
 #artifacts:
-   # files: imagedefinitions.json
+    #files: imagedefinitions.json
